# luigi-solutions-fcg

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
app/: auth.py  history.py  main.py  quota.py
app/app_pages/: brief.py  generate.py  home.py  login.py  projects.py  settings.py  submit.py
app/pages/: 1_Generate.py  2_Brief.py  3_Submit_and_Score.py
data/seeds/: bakery.json  coffee-shop.json  deli.json  digital-agency.json  event-planning.json  photography.json  restaurant.json
docs/: HANDOFF.md  decisions.md  quality.md  requirements.md  roadmap.md  vision.md
src/fcg/: __init__.py  ingest.py  models.py  storage.py
src/fcg/generator/: __init__.py  brief.py  client.py  dataset.py  project.py  seeds.py
src/fcg/scoring/: __init__.py  checks.py  grader.py  report.py
supabase/migrations/: 0001_weekly_generation_quota.sql  0002_completion_credits.sql  0003_generation_difficulty.sql
tests/: test_generator.py  test_history.py  test_quota.py  test_scaffold.py  test_scenarios.py  test_scoring.py  test_storage.py
